<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity/CardActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textCardCurrentRound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_current_round" />

        <TextView
            android:id="@+id/textCardTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCardCurrentRound"
            android:text="@string/card_team"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textCardTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCardTeam"
            android:text="@string/card_timer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textCardTurnScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCardTimer"
            android:text="@string/card_team_turn_score" />

        <TextView
            android:id="@+id/textCardRoundScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCardTurnScore"
            android:text="@string/card_team_round_score" />

        <TextView
            android:id="@+id/textCardTotalScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCardRoundScore"
            android:text="@string/card_team_total_score" />

        <TextView
            android:id="@+id/textRemainingCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCardTotalScore"
            android:text="@string/card_remaining" />

        <TextView
            android:id="@+id/textCardNameToFind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="150dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonFoundCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCardNameToFind"
            android:layout_below="@+id/textCardNameToFind"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="24dp"
            android:text="@string/card_found" />

        <Button
            android:id="@+id/buttonSkipCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonFoundCard"
            android:layout_alignBottom="@+id/buttonFoundCard"
            android:layout_marginLeft="70dp"
            android:layout_toRightOf="@+id/buttonFoundCard"
            android:text="@string/card_skip" />
    </RelativeLayout>

</ScrollView>