<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/addPlayerNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_player_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addPlayerNameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/create_player_name_hint" >

        <requestFocus />

    </EditText>

    <CheckBox
        android:id="@+id/checkCreatePlayerActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_player_active" />

    <Button
        android:id="@+id/buttonSavePlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>