<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SpacedownMainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />

    <Button
        android:id="@+id/buttonNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/create_game" />

    <Button
        android:id="@+id/buttonCreateCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonNewGame"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/create_card_title" />

    <Button
        android:id="@+id/buttonDBListCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCreateCard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/db_display_card_list" />

    <Button
        android:id="@+id/buttonImportCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonDBListCard"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:text="@string/import_cards" />

</RelativeLayout>