<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity/db/FilterDBCardsActivity" >

    <TextView
        android:id="@+id/textFilterDbDisplayActiveCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/db_number_cards" />


    <TextView
        android:id="@+id/textFilterDbDisplayInactiveCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textFilterDbDisplayActiveCards"
            android:layout_below="@+id/textFilterDbDisplayActiveCards"
        android:text="@string/db_number_cards_inactive" />

        <CheckBox
            android:id="@+id/checkBoxKeepCustomCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textFilterDbDisplayInactiveCards"
            android:layout_below="@+id/textFilterDbDisplayInactiveCards"
            android:checked="true"
            android:text="@string/import_cards_keep_custom" />

        <Button
            android:id="@+id/buttonConfirmFilterCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/checkBoxKeepCustomCards"
            android:layout_below="@+id/checkBoxKeepCustomCards"
            android:layout_marginTop="37dp"
            android:text="@string/db_filter_confirm" />

    </RelativeLayout>

</ScrollView>