<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".activity/create/CreateGameActivity" >

        <TextView
            android:id="@+id/textCreateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_title" />

        <TextView
            android:id="@+id/textCreateTeams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateTitle"
            android:layout_below="@+id/textCreateTitle"
            android:layout_marginTop="26dp"
            android:text="@string/create_teams" />

        <!-- <EditText -->
        <!-- android:id="@+id/editCreateTeam" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignLeft="@+id/textCreateTeams" -->
        <!-- android:layout_below="@+id/textCreateTeams" -->
        <!-- android:ems="10" -->
        <!-- android:inputType="numberSigned" -->
        <!-- android:text="2" /> -->

        <Spinner
            android:id="@+id/spinnerNumberOfTeams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textCreateTeams"
            android:layout_below="@+id/textCreateTeams"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/textNumberOfCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerNumberOfTeams"
            android:layout_marginTop="26dp"
            android:text="@string/create_number_of_cards" />

        <!-- <EditText -->
        <!-- android:id="@+id/CreateNumberOfCards" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_below="@+id/textNumberOfCards" -->
        <!-- android:ems="10" -->
        <!-- android:inputType="numberSigned" -->
        <!-- android:text="3" > -->
        <!-- </EditText> -->

        <Spinner
            android:id="@+id/spinnerNumberOfCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textNumberOfCards"
            android:layout_below="@+id/textNumberOfCards"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinnerNumberOfCards"
            android:layout_below="@+id/spinnerNumberOfCards"
            android:layout_marginTop="113dp"
            android:text="Other options (number of cards, category, date...)" />

        <!-- <Button -->
        <!-- android:id="@+id/buttonAddTeam" -->
        <!-- style="?android:attr/buttonStyleSmall" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignTop="@+id/editCreateTeam" -->
        <!-- android:layout_toRightOf="@+id/buttonNewGame" -->
        <!-- android:text="+" /> -->

        <CheckBox
            android:id="@+id/checkBoxDebugMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView01"
            android:layout_below="@+id/TextView01"
            android:text="@string/create_game_debug_mode" />

        <Button
            android:id="@+id/buttonNewGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/TextView01"
            android:layout_below="@+id/checkBoxDebugMode"
            android:layout_marginTop="37dp"
            android:text="@string/create_game" />

        <Button
            android:id="@+id/buttonContinueGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBoxDebugMode"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:layout_toRightOf="@+id/buttonNewGame"
            android:text="@string/continue_game" />
    </RelativeLayout>

</ScrollView>