<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity/CardActivity" >

    <TextView
        android:id="@+id/textScoreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_round_tab_title" />

    <TextView
        android:id="@+id/textScoreBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textScoreTitle"
        android:layout_below="@+id/textScoreTitle"
        android:layout_marginTop="20dp"
        android:text="@string/score_round_text" />

    <TextView
        android:id="@+id/textScoreRemainingCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textScoreTitle"
        android:layout_below="@+id/textScoreBoard"
        android:layout_marginTop="20dp"
        android:text="@string/score_round_text" />
    

    <ListView
        android:id="@+id/scoreTeamScoreList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textScoreRemainingCards"
        android:layout_alignParentLeft="true" >
    </ListView>

    <Button
        android:id="@+id/buttonNextRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textScoreTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="133dp"
        android:text="@string/score_next_round" />

</RelativeLayout>